# ca-helper

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  readme.md  setup.cfg  test.crt
ca-helper/: ca_helper.py  config.py  data-dev.sqlite
ca-helper/app/: __init__.py  models.py
ca-helper/app/main/: crypto.py  forms.py  views.py  views_old.py
ca-helper/app/static/: main.js
ca-helper/app/templates/: base.html  certificates.html  macros.html  macros_samle.html  new_certificate.html
flask-app/: __init__.py  ca_helper.py  config.py
flask-app/static/: rootca.pem
flask-app/templates/: index.html
ssl/: ca-helper-csr.json
test_app/: package-lock.json
