[tool.poetry]
name = "ca-helper"
version = "0.1.0"
description = ""
authors = ["asauerwein"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-bootstrap = "^3.3.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
