[tool.poetry]
name = "ca-helper"
version = "0.1.0"
description = ""
authors = ["asauerwein"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
flask-migrate = "^2.5.3"
flask-wtf = "^0.14.3"
flask-nav = "^0.6"
bootstrap-flask = "^1.5.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
black = "^20.8b1"


[tool.black]
line-length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

